Fix: 스크롤 이벤트 버그 수정 - 스크롤 시 뒷 배경 글자와 겹치는 버그 발생 - header, submenu z-index 전면 수정으로 해결 완료 Resolves: #1

--- a/src/components/common/Header.scss
+++ b/src/components/common/Header.scss
@@ -9,7 +9,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 9999;
+  z-index: 999;
 
   &__content {
     width: 1200px;
@@ -18,6 +18,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: 999;
   }
 
   &__navigation {
